--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# ${1:Variant Calling Workflow in Swift}
-## Problem statement
+# Variant Calling Workflow in Swift #
+## Problem statement ##
 Want a reasonably flexible variant calling workflow with the following features:
 1. Able to run on multiple clusters, so we could support work with different collaborators, such as
   * mForge - OGE - Mayo
@@ -25,5 +25,5 @@ Want a reasonably flexible variant calling workflow with the following features:
 The current Bash-based workflow has all of the above, except for the ability to run on different clusters.
 Also, it is difficult to maintain, such that introducing new features is very laborious. 
 Documentation is equally difficult. Those are the factors that drove us to explore Swift as a replacement for Bash glue.
-## Usage
+## Usage ##
 TODO: Write usage instructions
